--- a/src/pages/Page/Page.scss
+++ b/src/pages/Page/Page.scss
@@ -15,6 +15,7 @@
      display: flex;
      align-items: center;
      column-gap: 10px;
+     transition: opacity .2s ease-in-out;
 
      .button {
        width: 100px;
