--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -11,6 +11,11 @@
   cursor: pointer;
   transition: box-shadow .2s ease-in-out;
 
+  &:disabled {
+    opacity: .5;
+    pointer-events: none;
+  }
+
   &:hover {
     box-shadow: 0 0 10px var(--primary-200);
   }
