feat: add new app

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -5,7 +5,7 @@
     max-width: 425px;
     display: grid;
     grid-template-columns: repeat(3, minmax(0, 1fr));
-    gap: 25px;
+    gap: 15px 25px;
     justify-content: center;
     justify-items: center;
 
