--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,14 @@ svg {
     opacity: 1;
   }
 }
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 @keyframes scale {
   0% {
     transform: scale(1);
