--- a/src/App.scss
+++ b/src/App.scss
@@ -41,6 +41,15 @@ svg {
   }
 }
 
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 @keyframes scale {
   0% {
     transform: scale(1);
