--- a/src/components/Switch/Switch.css
+++ b/src/components/Switch/Switch.css
@@ -7,12 +7,28 @@
   padding: 4px 8px;
   box-shadow: 0 0 10px #ccc;
 }
-.switch svg {
+.switch div {
+  display: flex;
+  align-items: center;
+  column-gap: 6px;
+}
+.switch div span {
+  font-size: 10px;
+  color: var(--primary-100);
+  margin-top: 1.5px;
+  transition: fill 0.2s ease-in-out;
+  user-select: none;
+  cursor: pointer;
+}
+.switch div span:hover {
+  color: var(--primary-200);
+}
+.switch div svg {
   height: 22px;
   fill: var(--primary-100);
   transition: fill 0.2s ease-in-out;
 }
-.switch svg:hover {
+.switch div svg:hover {
   fill: var(--primary-200);
 }
 .switch input[type=number] {
