--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,7 +1,7 @@
 .home {
   padding: 25px;
 }
-.home__game-container {
+.home__app-container {
   max-width: 425px;
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -9,10 +9,10 @@
   justify-content: center;
   justify-items: center;
 }
-.home__game-container .game {
+.home__app-container .app {
   display: flex;
 }
-.home__game-container .game__info {
+.home__app-container .app__info {
   display: grid;
   grid-template-rows: 1fr 30px 24px;
   justify-items: center;
@@ -21,15 +21,15 @@
   cursor: pointer;
   user-select: none;
 }
-.home__game-container .game__info .info__image {
+.home__app-container .app__info .info__image {
   margin-bottom: 6px;
 }
-.home__game-container .game__info .info__image img {
+.home__app-container .app__info .info__image img {
   width: 100%;
   height: 100%;
   border-radius: 6px;
 }
-.home__game-container .game__info .info__name {
+.home__app-container .app__info .info__name {
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
@@ -39,20 +39,20 @@
   margin: auto 0;
   overflow: hidden;
 }
-.home__game-container .game__info .info__key {
+.home__app-container .app__info .info__code {
   display: flex;
   align-items: flex-end;
 }
-.home__game-container .game__info .info__key .key {
+.home__app-container .app__info .info__code .code {
   display: flex;
   align-items: center;
   column-gap: 6px;
 }
-.home__game-container .game__info .info__key .key .key__icon {
+.home__app-container .app__info .info__code .code .code__icon {
   width: 16px;
   height: 16px;
 }
-.home__game-container .game__info .info__key .key .key__count {
+.home__app-container .app__info .info__code .code .code__count {
   font-size: 10px;
   color: #000;
 }
